Fixed anchor links jumping too far by using padding instead of margin on top and bottom of sections.

--- a/css/style.css
+++ b/css/style.css
@@ -117,8 +117,8 @@ a img {
 }
 
 .page-section {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 img {
